--- a/app/views/videos/show.html.haml
+++ b/app/views/videos/show.html.haml
@@ -6,7 +6,7 @@
       .video_info.col-sm-3
         %header
           %h3 Futurama
-          %span Rating: 4.5/5.0
+          %span Rating: #{@video.rating} /5.0
         %p "#{@video.description}".
         .actions
           %a.btn.btn-primary(href="") Watch Now
@@ -15,34 +15,29 @@
 %section.reviews.container
   .row
     .col-sm-10.col-sm-offset-1
-      %form
+      = bootstrap_form_for(@review) do |f|
         %fieldset
           .form-group
             %label Rate this video
             .row
               .col-sm-3
-                %select.form-control(name="")
-                  %option(value="5") 5 Stars
-                  %option(value="4") 4 Stars
-                  %option(value="3") 3 Stars
-                  %option(value="2") 2 Stars
-                  %option(value="1") 1 Star
+                = f.select :stars, Review::STARS.map { |s| ["#{pluralize(s, 'Star')}", s] }, class:'form-control'
           .form-group
-            %label Write Review
             .row
               .col-sm-8
-                %textarea.form-control(name="" rows="6")
+                = f.text_area :comment, label: 'Write Review', rows: 6, class: 'form-control'
         %fieldset.form-group.actions.clearfix
-          %input(type="submit" value="Submit" class="btn")
+          = f.hidden_field :video_id, value: @video.id
+          = f.submit class:"btn"
           %a(href="") Cancel
       %header
-        %h3 User Reviews (253)
+        %h3 User Reviews (#{@review_count})
       %ul
-        - 8.times do
+        - @reviews.each do |review|
           %article.review
             %li.row
-              .col-sm-2
-                %span Rating: 5 / 5
-                %p by <a href="">John A. Zoidberg</a>
+              .col-sm-3
+                %span Rating: #{review.stars} / 5
+                %p by <a href=""> #{reviewer(review)}</a>
               .col-sm-8
-                %p In my opinion, this is one of the best shows ever made. It's not only funny, but despite being so frequently silly, it's very smart as well. Math, science, history, all get referenced. The best parts of the show are the subtle things, those little things in the background or just on screen for a couple of seconds that just make you laugh out loud if you were paying attention. The writers even appear to have been thinking ahead, because if you play close attention to the first episode, you can see a literal shadow of an event revealed seasons later.
+                %p #{review.comment}
