--- a/app/views/videos/show.html.haml
+++ b/app/views/videos/show.html.haml
@@ -5,31 +5,30 @@
         %img(src="/tmp/monk_large.jpg")
       .video_info.col-sm-3
         %header
-          %h3 Futurama
+          %h3 #{@video.title}
           %span Rating: #{sprintf('%.1f', @video.rating)} /5.0
         %p "#{@video.description}".
         .actions
           %a.btn.btn-primary(href="") Watch Now
-          %a.btn.btn-default(href="") + My Queue
+          = link_to "+ My Queue", queue_items_path(video_id: @video), method: :post, class: 'btn btn-default'
 
 %section.reviews.container
   .row
     .col-sm-10.col-sm-offset-1
-      = bootstrap_form_for(@review) do |f|
+      = bootstrap_form_for [@video, @review] do |f|
         %fieldset
           .form-group
             %label Rate this video
             .row
               .col-sm-3
-                = f.select :stars, Review::STARS.map { |s| ["#{pluralize(s, 'Star')}", s] }, class:'form-control'
+                = f.select :stars, ratings_values, class:'form-control'
           .form-group
             .row
               .col-sm-8
                 = f.text_area :comment, label: 'Write Review', rows: 6, class: 'form-control'
         %fieldset.form-group.actions.clearfix
-          = f.hidden_field :video_id, value: @video.id
           = f.submit class:"btn"
-          %a(href="") Cancel
+          = link_to 'Cancel', @video
       %header
         %h3 User Reviews (#{@review_count})
       %ul
