Re-order queue by position

--- a/app/views/queue_items/index.html.haml
+++ b/app/views/queue_items/index.html.haml
@@ -4,30 +4,35 @@
       %article
         %header
           %h2 My Queue
-        %table.table
-          %thead
-            %tr
-              %th(width="10%") List Order
-              %th(width="30%") Video Title
-              %th(width="10%") Play
-              %th(width="20%") Rating
-              %th(width="15%") Genre
-              %th(width="15%") Remove
-          %tbody
-            - @queue_items.each do |queue_item|
+        = bootstrap_form_tag(url: update_user_queue_path, method: :put) do |f| 
+          =# f.error_summary
+          %table.table
+            %thead
               %tr
-                %td
-                  = text_field_tag :position, value= queue_item.position, class: 'form-control'
-                %td
-                  = link_to queue_item.video_title, video_path(queue_item.video)
-                %td
-                  = button_to "Play", nil, class: "btn btn-default"
-                %td
-                  = select_tag :stars, ratings_values, class: 'form-group'
-                %td
-                  = link_to queue_item.category_name, queue_item.category
-                %td
-                  = link_to( queue_item, method: :delete) do
-                    %i.glyphicon.glyphicon-remove
-               
-        = button_to "Update Instant Queue", nil, class: "btn btn-default"
+                %th(width="10%") List Order
+                %th(width="30%") Video Title
+                %th(width="10%") Play
+                %th(width="20%") Rating
+                %th(width="15%") Genre
+                %th(width="15%") Remove
+            %tbody
+              - @queue_items.each do |queue_item|
+                %tr
+                  %td
+                    = f.text_field "queue_items[][position]", hide_label: true, value: queue_item.position, class:'form-control'
+                    = f.hidden_field "queue_items[][id]", value: queue_item.id, class:'form-control'
+                  %td
+                    = link_to queue_item.video_title, video_path(queue_item.video)
+                  %td
+                    = button_to "Play", nil, class: "btn btn-default"
+                  %td
+                    =# f.select :stars, ratings_values, class: 'form-group'
+                  %td
+                    = link_to queue_item.category_name, queue_item.category
+                  %td
+                    = link_to( queue_item, method: :delete) do
+                      %i.glyphicon.glyphicon-remove
+                 
+          = f.submit "Update Instant Queue", class: "btn btn-default"
+          =# debug params
+
