--- a/app/views/queue_items/index.html.haml
+++ b/app/views/queue_items/index.html.haml
@@ -26,7 +26,7 @@
                   %td
                     = button_to "Play", nil, class: "btn btn-default"
                   %td
-                    =# f.select :stars, ratings_values, class: 'form-group'
+                    = f.select "queue_items[][stars]", ratings_values, selected: queue_item.star_rating, include_blank: true, hide_label: true, class: 'form-group'
                   %td
                     = link_to queue_item.category_name, queue_item.category
                   %td
