--- a/app/views/videos/show.html.haml
+++ b/app/views/videos/show.html.haml
@@ -10,7 +10,8 @@
         %p "#{@video.description}".
         .actions
           %a.btn.btn-primary(href="") Watch Now
-          = link_to "+ My Queue", queue_items_path(video_id: @video), method: :post, class: 'btn btn-default'
+          - unless queue_includes?(@video)
+            = link_to "+ My Queue", queue_items_path(video_id: @video), method: :post, class: 'btn btn-default'
 
 %section.reviews.container
   .row
