--- a/app/views/videos/show.html.haml
+++ b/app/views/videos/show.html.haml
@@ -38,6 +38,8 @@
             %li.row
               .col-sm-3
                 %span Rating: #{review.stars} / 5
-                %p by <a href=""> #{reviewer(review)}</a>
+                %p
+                  by 
+                  =link_to "#{reviewer(review)}", user_path(review.user)
               .col-sm-8
                 %p #{review.comment}
