--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -8,7 +8,7 @@
     %ul.col-md-3.clearfix
       %li= link_to "Videos", home_path
       %li= link_to "My Queue", queue_items_path
-      %li= link_to "People"
+      %li= link_to "People", people_path
     = form_tag search_videos_path, class: "col-md-3 navbar-form" do
       .form-group
         %input.form-control(type="text" name="search_word" placeholder="Search for videos here")
