--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -5,7 +5,7 @@
         %header
           %img(src="http://www.gravatar.com/avatar/#{Digest::MD5.hexdigest('@user.email'.downcase)}?s=40")
           %h2 #{@user.full_name}'s video collections (#{queue_count(@user)})
-          =link_to "Follow", friendships_path(friend_id: @user.id), method: :post, class: "btn btn-default"
+          =link_to "Follow", friendships_path(friend_id: @user.id), method: :post, class: "btn btn-default" unless current_user.follows_or_same?(@user)
         %table.table
           %thead
             %tr
