--- a/app/assets/stylesheets/people.sass
+++ b/app/assets/stylesheets/people.sass
@@ -17,6 +17,10 @@ section.people
           text-align: center
         td
           img
-            margin-right: 10px
+            margin-right: 5px
+          #gravatar
+            float: left
+            margin-left: 10px
+            text-align: left
           &.extra-padding
             padding-top: 18px
