--- a/app/views/people/index.html.haml
+++ b/app/views/people/index.html.haml
@@ -12,7 +12,7 @@
       - @friendships.each do |friendship|
         %tr
           %td
-            %img(src="http://www.gravatar.com/avatar/#{Digest::MD5.hexdigest('knwang@gmail.com'.downcase)}?s=40")
+            %img#gravatar(src="http://www.gravatar.com/avatar/#{Digest::MD5.hexdigest('knwang@gmail.com'.downcase)}?s=40") 
             = link_to friendship.friend.full_name, user_path(friendship.friend)
           %td.extra-padding #{friendship.friend.queue_items.count}
           %td.extra-padding #{friendship.friend.inverse_friends.count}
