--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -1,6 +1,6 @@
 %section.register.container
   .row
-    .col-sm-10.col-sm-offset-1
+    .col-sm-8.col-sm-offset-2
       = bootstrap_form_for @user, html: { class: 'form-horizontal' } do |f|
         %header
           %h1 Register
@@ -8,6 +8,7 @@
           = f.email_field :email, label: "Email Address"
           = f.password_field :password
           = f.text_field :full_name, label: "Full Name"
-        %fieldset.actions.control-group.col-sm-offset-2
+          = f.hidden_field :invitation_id, value: params[:invitation_id]
+        %fieldset.actions.control-group.col-sm-offset-2.form-group
           .controls
-            %input(type="submit" value="Sign Up" class="btn btn-default")
+            = f.submit "Sign Up", class: "btn btn-default"
