--- a/app/views/welcome_mailer/send_password_link.html.erb
+++ b/app/views/welcome_mailer/send_password_link.html.erb
@@ -5,7 +5,7 @@
     <br>
     <p>Please click the link below to reset your password.</p>
     <br>
-    <p><%=link_to "Reset password", edit_password_reset_url(@user.token) %></p>
+    <p><%=link_to "Reset password", edit_password_reset_url(@user.token, host: request.host) %></p>
     <br>
     MyFlix Sales Team
   </body>
