--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -8,7 +8,7 @@
           = f.email_field :email, label: "Email Address"
           = f.password_field :password
           = f.text_field :full_name, label: "Full Name"
-          = f.hidden_field :invitation_id, value: params[:invitation_id]
+          = f.hidden_field :invitation_id, value: params[:invitation_id] if params[:invitation_id]
         %fieldset.actions.control-group.col-sm-offset-2.form-group
           .controls
             = f.submit "Sign Up", class: "btn btn-default"
