--- a/app/views/videos/show.html.haml
+++ b/app/views/videos/show.html.haml
@@ -9,7 +9,7 @@
           %span Rating: #{sprintf('%.1f', @video.rating)} /5.0
         %p "#{@video.description}".
         .actions
-          %a.btn.btn-primary(href="") Watch Now
+          = link_to "Watch Now", @video.video_url, class: "btn btn-primary"
           - unless queue_includes?(@video)
             = link_to "+ My Queue", queue_items_path(video_id: @video), method: :post, class: 'btn btn-default'
 
