--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -11,4 +11,4 @@
           = f.hidden_field :invitation_id, value: params[:invitation_id] if params[:invitation_id]
         %fieldset.actions.control-group.col-sm-offset-2.form-group
           .controls
-            = f.submit "Sign Up", class: "btn btn-default"
+            <script src="https://checkout.stripe.com/checkout.js" class="stripe-button" data-key=#{ENV['STRIPE_PUBLISHABLE_KEY']} data-name="MyFlix Sign Up Charge" data-description="$9.99 sign up charge" data-amount="999" data-currency="usd"></script>
