--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -1,14 +1,37 @@
+%script(type="text/javascript" src="https://js.stripe.com/v2/")
+<script type="text/javascript">
+Stripe.setPublishableKey("#{ENV['STRIPE_PUBLISHABLE_KEY']}");
+</script>
+
+= javascript_include_tag 'payments'
+
 %section.register.container
   .row
-    .col-sm-8.col-sm-offset-2
-      = bootstrap_form_for @user, html: { class: 'form-horizontal' } do |f|
+    .col-sm-10.col-sm-offset-1
+      = bootstrap_form_for(@user, layout: :horizontal, label_col: 'col-sm-3', control_col: 'col-sm-9', html: {id: 'payment-form'}) do |f|
         %header
           %h1 Register
         %fieldset
-          = f.email_field :email, label: "Email Address"
-          = f.password_field :password
-          = f.text_field :full_name, label: "Full Name"
+          = f.email_field :email, label: "Email Address", control_col: "col-sm-4"
+          = f.password_field :password, label: "Password", control_col: "col-sm-4"
+          = f.text_field :full_name, label: "Full Name", control_col: "col-sm-4"
           = f.hidden_field :invitation_id, value: params[:invitation_id] if params[:invitation_id]
-        %fieldset.actions.control-group.col-sm-offset-2.form-group
+        %fieldset.credit_card
+          %span.payment-errors
+          .form-group
+            = label_tag :credit_card_number, 'Credit Card Number', class: 'control-label col-sm-3'
+            .col-sm-4
+              =text_field_tag :credit_card_number, nil, data: { stripe: 'number' }, class: 'form-control'
+          .form-group
+            =label_tag :security_code, 'Security Code', class: 'control-label col-sm-3'
+            .col-sm-4
+              = text_field_tag :security_code, nil, data: { stripe: 'cvc' }, class: 'form-control'
+          .form-group
+            =label_tag nil, 'Expiration', class: 'control-label col-sm-3'
+            .col-sm-2
+              =select_month(Date.today, {add_month_numbers: true},  class: 'form-control', name: nil, data: {stripe: 'exp-month'})
+            .col-sm-2
+              =select_year(Date.today.year, {start_year: Date.today.year, end_year: Date.today.year + 4},  class: 'form-control', name: nil, data: {stripe: 'exp-year'})
+        %fieldset.actions.control-group.col-sm-offset-3
           .controls
-            <script src="https://checkout.stripe.com/checkout.js" class="stripe-button" data-key=#{ENV['STRIPE_PUBLISHABLE_KEY']} data-name="MyFlix Sign Up Charge" data-description="$9.99 sign up charge" data-amount="999" data-currency="usd"></script>
+            %input(type="submit" value="Sign Up" class="btn btn-default")
