Add feature tests for user registration with credit card

--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -3,7 +3,7 @@
 Stripe.setPublishableKey("#{ENV['STRIPE_PUBLISHABLE_KEY']}");
 </script>
 
-= javascript_include_tag 'payments'
+= javascript_include_tag 'payment'
 
 %section.register.container
   .row
