--- a/app/views/videos/show.html.haml
+++ b/app/views/videos/show.html.haml
@@ -6,7 +6,8 @@
       .video_info.col-sm-3
         %header
           %h3 #{@video.title}
-          %span Rating: #{sprintf('%.1f', @video.rating)} /5.0
+          %span Rating:
+          =@video.rating
         %p "#{@video.description}".
         .actions
           = link_to "Watch Now", @video.video_url, class: "btn btn-primary"
@@ -39,7 +40,7 @@
               .col-sm-3
                 %span Rating: #{review.stars} / 5
                 %p
-                  by 
+                  by
                   =link_to "#{reviewer(review)}", user_path(review.user)
               .col-sm-8
                 %p #{review.comment}
