Implement 'Admin Views Payments'

--- a/app/views/admin/videos/new.html.haml
+++ b/app/views/admin/videos/new.html.haml
@@ -5,9 +5,9 @@
         = bootstrap_form_for [:admin, @video], html: { multipart: true, class: 'form-horizontal' } do |f|
           %ul.nav.nav-tabs
             %li
-              %a(href="") Recent Payments
+              %a(href="/admin_views_payments") Recent Payments
             %li.active
-              %a(href="") Add a New Video
+              %a(href="/admin_add_video") Add a New Video
           %br
           %fieldset
             .form-group
